feat: query for get user transaction
