# api/transaction/controller.go
@@ -81,6 +81,13 @@ func (controller *Controller) GetAll(c echo.Context) (err error) {
 // @Summary Get all transaction from specific user
 // @Description  Get all transaction from specific user
 // @Param id   path  string  true  "user ID" minLength:"32"
+// @Param query   query  string  false  "search data by query"
+// @Param date   query  string  false  "search data by date"
+// @Param dateRange   query  string  false  "search data by dateRange"
+// @Param status   query  string  false  "search data by status"
+// @Param category   query  string  false  "search data by category"
+// @Param page   query  string  false  "search data by page"
+// @Param pageSize   query  string  false  "search data by pageSize"
 // @Tags         users
 // @Produce      json
 // @Success      200  {array}  dto.ClientTransactionsResponse
@@ -92,13 +99,21 @@ func (controller *Controller) GetAll(c echo.Context) (err error) {
 func (controller *Controller) UsersGetAll(c echo.Context) (err error) {
 	log.Print("enter controller.transaction.UsersGetAll")
 	id := c.Param("id")
+	query := c.QueryParam("query")
+	date := c.QueryParam("date")
+	dateRange := c.QueryParam("dateRange")
+	status := c.QueryParam("status")
+	category := c.QueryParam("category")
+	page := c.QueryParam("page")
+	pageSize := c.QueryParam("page_size")
+
 	// page := c.QueryParam("pages")
 	// limit := c.QueryParam("limits")
 	if id != c.Get("payload").(string) {
 		err = errors.New("Tidak berizin")
 		return
 	}
-	datas, err := controller.service.UsersGetAll(id)
+	datas, err := controller.service.UsersGetAll(id, query, date, dateRange, status, category, page, pageSize)
 	if err != nil {
 		return c.JSON(http.StatusBadRequest, response.BasicTransactionResponse{
 			Status:  "fail",
