# docs/swagger.yaml
@@ -1567,6 +1567,34 @@ paths:
         name: id
         required: true
         type: string
+      - description: search data by query
+        in: query
+        name: query
+        type: string
+      - description: search data by date
+        in: query
+        name: date
+        type: string
+      - description: search data by dateRange
+        in: query
+        name: dateRange
+        type: string
+      - description: search data by status
+        in: query
+        name: status
+        type: string
+      - description: search data by category
+        in: query
+        name: category
+        type: string
+      - description: search data by page
+        in: query
+        name: page
+        type: string
+      - description: search data by pageSize
+        in: query
+        name: pageSize
+        type: string
       produces:
       - application/json
       responses:
